tests/snapshots/json_fixtures__suppression.snap
---
source: crates/sniff-test/tests/json_fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "suppression",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "suppression",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 0,
    "counts": {
      "panic-obligations": 0,
      "raw-panic-paths": 0,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
